force-app/main/default/objects/Environment_Profile__c/Environment_Profile__c.object-meta.xml
<CustomObject>
    <description>SDS-995:Service Cloud: Track Customer Environment Profiles
As a Service Cloud User, I should be able to track customer-specific details for vGPU or DGX products owned by the Customer</description>
    <label>Environment Profile</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>