force-app/main/default/objects/Environment_Profile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Environment Profiles</relationshipLabel>
    <relationshipName>Environment_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>