force-app/main/default/objects/Environment_Profile__c/fields/BIOS__c.field-meta.xml
<CustomField>
    <fullName>BIOS__c</fullName>
    <label>BIOS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>