force-app/main/default/objects/Environment_Profile__c/fields/BMC__c.field-meta.xml
<CustomField>
    <fullName>BMC__c</fullName>
    <label>BMC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>