force-app/main/default/objects/Environment_Profile__c/fields/CEC__c.field-meta.xml
<CustomField>
    <fullName>CEC__c</fullName>
    <label>CEC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>