force-app/main/default/objects/Environment_Profile__c/fields/Compute_Nodes__c.field-meta.xml
<CustomField>
    <fullName>Compute_Nodes__c</fullName>
    <label>Compute Nodes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>