force-app/main/default/objects/Environment_Profile__c/fields/Connection_Speed__c.field-meta.xml
<CustomField>
    <fullName>Connection_Speed__c</fullName>
    <label>Connection Speed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>