force-app/main/default/objects/Environment_Profile__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <label>Container</label>
    <length>100</length>
    <type>Text</type>
</CustomField>