force-app/main/default/objects/Environment_Profile__c/fields/Cooling_Style__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Style__c</fullName>
    <label>Cooling Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>