force-app/main/default/objects/Environment_Profile__c/fields/Data_at_Rest_Encryption_Used__c.field-meta.xml
<CustomField>
    <fullName>Data_at_Rest_Encryption_Used__c</fullName>
    <label>Data at Rest Encryption Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>