force-app/main/default/objects/Environment_Profile__c/fields/Dedicated_Agent__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Agent__c</fullName>
    <label>Dedicated Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>