force-app/main/default/objects/Environment_Profile__c/fields/Display_Driver_Version__c.field-meta.xml
<CustomField>
    <fullName>Display_Driver_Version__c</fullName>
    <label>Display Driver Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>