force-app/main/default/objects/Environment_Profile__c/fields/Display_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Display_Resolution__c</fullName>
    <label>Display Resolution</label>
    <length>100</length>
    <type>Text</type>
</CustomField>