force-app/main/default/objects/Environment_Profile__c/fields/DL_Framework__c.field-meta.xml
<CustomField>
    <fullName>DL_Framework__c</fullName>
    <label>DL Framework</label>
    <length>255</length>
    <type>Text</type>
</CustomField>