force-app/main/default/objects/Environment_Profile__c/fields/Drive_Partitioning__c.field-meta.xml
<CustomField>
    <fullName>Drive_Partitioning__c</fullName>
    <label>Drive Partitioning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>