force-app/main/default/objects/Environment_Profile__c/fields/Drive_Partitioning_Customization__c.field-meta.xml
<CustomField>
    <fullName>Drive_Partitioning_Customization__c</fullName>
    <label>Drive Partitioning Customization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>