force-app/main/default/objects/Environment_Profile__c/fields/DriveCC_Version__c.field-meta.xml
<CustomField>
    <fullName>DriveCC_Version__c</fullName>
    <label>DriveCC Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>