force-app/main/default/objects/Environment_Profile__c/fields/Driver_version__c.field-meta.xml
<CustomField>
    <fullName>Driver_version__c</fullName>
    <label>Driver version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>