force-app/main/default/objects/Environment_Profile__c/fields/DriveSim_Version__c.field-meta.xml
<CustomField>
    <fullName>DriveSim_Version__c</fullName>
    <label>DriveSim Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>