force-app/main/default/objects/Environment_Profile__c/fields/DRS_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DRS_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DRS Enabled</label>
    <type>Checkbox</type>
</CustomField>