force-app/main/default/objects/Environment_Profile__c/fields/End_Point_Client_Version__c.field-meta.xml
<CustomField>
    <fullName>End_Point_Client_Version__c</fullName>
    <label>End Point Client Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>