force-app/main/default/objects/Environment_Profile__c/fields/End_Point_Type__c.field-meta.xml
<CustomField>
    <fullName>End_Point_Type__c</fullName>
    <label>End Point Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thick Client</fullName>
            </value>
            <value>
                <fullName>Thin Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>