force-app/main/default/objects/Environment_Profile__c/fields/ETH_IB_connections__c.field-meta.xml
<CustomField>
    <fullName>ETH_IB_connections__c</fullName>
    <label>ETH/IB connections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>