force-app/main/default/objects/Environment_Profile__c/fields/Firmware_Notes__c.field-meta.xml
<CustomField>
    <fullName>Firmware_Notes__c</fullName>
    <label>Firmware Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>