force-app/main/default/objects/Environment_Profile__c/fields/FPGA__c.field-meta.xml
<CustomField>
    <fullName>FPGA__c</fullName>
    <label>FPGA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>