force-app/main/default/objects/Environment_Profile__c/fields/Graphics_Virtualization_Type__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Virtualization_Type__c</fullName>
    <label>Graphics Virtualization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>vSGA</fullName>
            </value>
            <value>
                <fullName>vGPU</fullName>
            </value>
            <value>
                <fullName>VDA</fullName>
            </value>
            <value>
                <fullName>DDA</fullName>
            </value>
            <value>
                <fullName>HDX 3D Pro</fullName>
            </value>
            <value>
                <fullName>RemoteFX</fullName>
            </value>
            <value>
                <fullName>Bare Metal or Pass-through</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>