force-app/main/default/objects/Environment_Profile__c/fields/GRID_Card_Model_s__c.field-meta.xml
<CustomField>
    <fullName>GRID_Card_Model_s__c</fullName>
    <label>GRID Card Model(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>M10</fullName>
            </value>
            <value>
                <fullName>M6</fullName>
            </value>
            <value>
                <fullName>M60</fullName>
            </value>
            <value>
                <fullName>P100</fullName>
            </value>
            <value>
                <fullName>P100 12GB</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P40</fullName>
            </value>
            <value>
                <fullName>P6</fullName>
            </value>
            <value>
                <fullName>RTX 6000</fullName>
            </value>
            <value>
                <fullName>RTX 6000 passive</fullName>
            </value>
            <value>
                <fullName>RTX 8000</fullName>
            </value>
            <value>
                <fullName>RTX 8000 passive7</fullName>
            </value>
            <value>
                <fullName>T4</fullName>
            </value>
            <value>
                <fullName>V100</fullName>
            </value>
            <value>
                <fullName>V1006</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>