force-app/main/default/objects/Environment_Profile__c/fields/GRID_Cards_Installed_Per_Server__c.field-meta.xml
<CustomField>
    <fullName>GRID_Cards_Installed_Per_Server__c</fullName>
    <label>GRID Cards Installed Per Server</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>