force-app/main/default/objects/Environment_Profile__c/fields/Hypervisor_Version__c.field-meta.xml
<CustomField>
    <fullName>Hypervisor_Version__c</fullName>
    <label>Hypervisor Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>