force-app/main/default/objects/Environment_Profile__c/fields/Inforom_GPU_Stats__c.field-meta.xml
<CustomField>
    <fullName>Inforom_GPU_Stats__c</fullName>
    <label>Inforom GPU Stats</label>
    <length>200</length>
    <type>Text</type>
</CustomField>