force-app/main/default/objects/Environment_Profile__c/fields/License_Server_Host_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Server_Host_Type__c</fullName>
    <label>License Server Host Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VM</fullName>
            </value>
            <value>
                <fullName>Physical PC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>