force-app/main/default/objects/Environment_Profile__c/fields/License_Server_OS__c.field-meta.xml
<CustomField>
    <fullName>License_Server_OS__c</fullName>
    <label>License Server OS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>