force-app/main/default/objects/Environment_Profile__c/fields/License_Server_version__c.field-meta.xml
<CustomField>
    <fullName>License_Server_version__c</fullName>
    <label>License Server version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>