force-app/main/default/objects/Environment_Profile__c/fields/M_2__c.field-meta.xml
<CustomField>
    <fullName>M_2__c</fullName>
    <label>M.2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>