force-app/main/default/objects/Environment_Profile__c/fields/Memory_Per_Server__c.field-meta.xml
<CustomField>
    <fullName>Memory_Per_Server__c</fullName>
    <label>Memory Per Server</label>
    <length>150</length>
    <type>Text</type>
</CustomField>