force-app/main/default/objects/Environment_Profile__c/fields/MLX__c.field-meta.xml
<CustomField>
    <fullName>MLX__c</fullName>
    <label>MLX</label>
    <length>100</length>
    <type>Text</type>
</CustomField>