force-app/main/default/objects/Environment_Profile__c/fields/Network_Cables_Used__c.field-meta.xml
<CustomField>
    <fullName>Network_Cables_Used__c</fullName>
    <label>Network Cables Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>