force-app/main/default/objects/Environment_Profile__c/fields/Network_Switches_Used_and_Topology__c.field-meta.xml
<CustomField>
    <fullName>Network_Switches_Used_and_Topology__c</fullName>
    <label>Network Switches Used and Topology</label>
    <length>100</length>
    <type>Text</type>
</CustomField>