force-app/main/default/objects/Environment_Profile__c/fields/Networking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Networking_Notes__c</fullName>
    <label>Networking Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>