force-app/main/default/objects/Environment_Profile__c/fields/NICs__c.field-meta.xml
<CustomField>
    <fullName>NICs__c</fullName>
    <label>NICs</label>
    <length>100</length>
    <type>Text</type>
</CustomField>