force-app/main/default/objects/Environment_Profile__c/fields/Number_of_Cards_Connected__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cards_Connected__c</fullName>
    <label>Number of Cards Connected</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>