force-app/main/default/objects/Environment_Profile__c/fields/Number_of_Displays__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Displays__c</fullName>
    <label>Number of Displays</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>