force-app/main/default/objects/Environment_Profile__c/fields/Onsite_Technician__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Technician__c</fullName>
    <label>Onsite Technician</label>
    <length>255</length>
    <type>Text</type>
</CustomField>