force-app/main/default/objects/Environment_Profile__c/fields/OS__c.field-meta.xml
<CustomField>
    <fullName>OS__c</fullName>
    <label>OS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Windows 7</fullName>
            </value>
            <value>
                <fullName>Windows 8</fullName>
            </value>
            <value>
                <fullName>Windows 8.1</fullName>
            </value>
            <value>
                <fullName>Windows 10 1507</fullName>
            </value>
            <value>
                <fullName>Windows 10 1511</fullName>
            </value>
            <value>
                <fullName>Windows 10 1607</fullName>
            </value>
            <value>
                <fullName>Windows 10 1703</fullName>
            </value>
            <value>
                <fullName>Windows 10 1709</fullName>
            </value>
            <value>
                <fullName>Windows 10 1803</fullName>
            </value>
            <value>
                <fullName>Windows 10 1809</fullName>
            </value>
            <value>
                <fullName>Windows 10 1903</fullName>
            </value>
            <value>
                <fullName>Windows 10 1909</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008 R2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2012 R2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2016 1607</fullName>
            </value>
            <value>
                <fullName>Windows Server 2016 1709</fullName>
            </value>
            <value>
                <fullName>Windows Server 2019</fullName>
            </value>
            <value>
                <fullName>Red Hat Enterprise Linux 6.6</fullName>
            </value>
            <value>
                <fullName>Red Hat Enterprise Linux 7.0</fullName>
            </value>
            <value>
                <fullName>Red Hat Enterprise Linux 7.6</fullName>
            </value>
            <value>
                <fullName>Red Hat Enterprise Linux 7.7</fullName>
            </value>
            <value>
                <fullName>SUSE Linux Enterprise Server 12 SP3+</fullName>
            </value>
            <value>
                <fullName>Ubuntu 14.04 LTS</fullName>
            </value>
            <value>
                <fullName>Ubuntu 16.04 LTS</fullName>
            </value>
            <value>
                <fullName>Ubuntu 18.04 LTS</fullName>
            </value>
            <value>
                <fullName>BaseOS</fullName>
            </value>
            <value>
                <fullName>RedHat</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>DGX OS</fullName>
            </value>
            <value>
                <fullName>CentOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>