force-app/main/default/objects/Environment_Profile__c/fields/Part_of_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Cluster__c</fullName>
    <label>Part of Cluster</label>
    <length>255</length>
    <type>Text</type>
</CustomField>