force-app/main/default/objects/Environment_Profile__c/fields/Patches_Applied_Over_Host_Hypervisor__c.field-meta.xml
<CustomField>
    <fullName>Patches_Applied_Over_Host_Hypervisor__c</fullName>
    <label>Patches Applied Over Host Hypervisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>