force-app/main/default/objects/Environment_Profile__c/fields/PLX__c.field-meta.xml
<CustomField>
    <fullName>PLX__c</fullName>
    <label>PLX</label>
    <length>100</length>
    <type>Text</type>
</CustomField>