force-app/main/default/objects/Environment_Profile__c/fields/Power_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Power_Source_Type__c</fullName>
    <label>Power Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>