force-app/main/default/objects/Environment_Profile__c/fields/PSU__c.field-meta.xml
<CustomField>
    <fullName>PSU__c</fullName>
    <label>PSU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>