force-app/main/default/objects/Environment_Profile__c/fields/Rack_Info__c.field-meta.xml
<CustomField>
    <fullName>Rack_Info__c</fullName>
    <label>Rack Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>