force-app/main/default/objects/Environment_Profile__c/fields/Remoting_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Remoting_Protocol__c</fullName>
    <label>Remoting Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VMware Blast</fullName>
            </value>
            <value>
                <fullName>VMware PCoIP</fullName>
            </value>
            <value>
                <fullName>Citrix HDX 3D PRO</fullName>
            </value>
            <value>
                <fullName>VNC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>