force-app/main/default/objects/Environment_Profile__c/fields/Remoting_Solution__c.field-meta.xml
<CustomField>
    <fullName>Remoting_Solution__c</fullName>
    <label>Remoting Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VMware Horizon</fullName>
            </value>
            <value>
                <fullName>Citrix XenDesktop</fullName>
            </value>
            <value>
                <fullName>Citrix XenApp</fullName>
            </value>
            <value>
                <fullName>VNC</fullName>
            </value>
            <value>
                <fullName>RDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>