force-app/main/default/objects/Environment_Profile__c/fields/Remoting_Solution_Version__c.field-meta.xml
<CustomField>
    <fullName>Remoting_Solution_Version__c</fullName>
    <label>Remoting Solution Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>