force-app/main/default/objects/Environment_Profile__c/fields/SBIOS__c.field-meta.xml
<CustomField>
    <fullName>SBIOS__c</fullName>
    <label>SBIOS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>