force-app/main/default/objects/Environment_Profile__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Datacenter</fullName>
            </value>
            <value>
                <fullName>Cluster</fullName>
            </value>
            <value>
                <fullName>Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>