force-app/main/default/objects/Environment_Profile__c/fields/Security_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Security_Restrictions__c</fullName>
    <label>Security Restrictions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Photos</fullName>
            </value>
            <value>
                <fullName>No Logs</fullName>
            </value>
            <value>
                <fullName>No Entry by Service Personnel</fullName>
            </value>
            <value>
                <fullName>No USB Drives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>