force-app/main/default/objects/Environment_Profile__c/fields/Server_Brand__c.field-meta.xml
<CustomField>
    <fullName>Server_Brand__c</fullName>
    <label>Server Brand</label>
    <length>150</length>
    <type>Text</type>
</CustomField>