force-app/main/default/objects/Environment_Profile__c/fields/Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Service_Notes__c</fullName>
    <label>Service Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>