force-app/main/default/objects/Environment_Profile__c/fields/Size_of_PODs__c.field-meta.xml
<CustomField>
    <fullName>Size_of_PODs__c</fullName>
    <label>Size of PODs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>