force-app/main/default/objects/Environment_Profile__c/fields/Storage__c.field-meta.xml
<CustomField>
    <fullName>Storage__c</fullName>
    <label>Storage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>