force-app/main/default/objects/Environment_Profile__c/fields/Switch_Info__c.field-meta.xml
<CustomField>
    <fullName>Switch_Info__c</fullName>
    <label>Switch Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>