force-app/main/default/objects/Environment_Profile__c/fields/Type_of_Cards__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Cards__c</fullName>
    <label>Type of Cards</label>
    <type>TextArea</type>
</CustomField>