force-app/main/default/objects/Environment_Profile__c/fields/U_2__c.field-meta.xml
<CustomField>
    <fullName>U_2__c</fullName>
    <label>U.2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>