force-app/main/default/objects/Environment_Profile__c/fields/Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Usage_Type__c</fullName>
    <label>Usage Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>