force-app/main/default/objects/Environment_Profile__c/fields/VBIOS__c.field-meta.xml
<CustomField>
    <fullName>VBIOS__c</fullName>
    <label>VBIOS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>