force-app/main/default/objects/Environment_Profile__c/fields/Vendor_Name_Model__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name_Model__c</fullName>
    <label>Vendor Name / Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>