force-app/main/default/objects/Environment_Profile__c/fields/vGPU_Manager_Driver_Version__c.field-meta.xml
<CustomField>
    <fullName>vGPU_Manager_Driver_Version__c</fullName>
    <label>vGPU Manager Driver Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>