force-app/main/default/objects/Environment_Profile__c/fields/vGPU_Profile__c.field-meta.xml
<CustomField>
    <fullName>vGPU_Profile__c</fullName>
    <label>vGPU Profile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>