force-app/main/default/objects/Environment_Profile__c/fields/Virtual_Machine__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Machine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Virtual Machine</label>
    <type>Checkbox</type>
</CustomField>