force-app/main/default/objects/Environment_Profile__c/fields/Virtualization_Platform__c.field-meta.xml
<CustomField>
    <fullName>Virtualization_Platform__c</fullName>
    <label>Virtualization Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Citrix Hypervisor</fullName>
            </value>
            <value>
                <fullName>Linux with KVM</fullName>
            </value>
            <value>
                <fullName>Microsoft Windows Server</fullName>
            </value>
            <value>
                <fullName>Nutanix AHV</fullName>
            </value>
            <value>
                <fullName>Red Hat Enterprise Linux with KVM</fullName>
            </value>
            <value>
                <fullName>VMware vSphere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>