force-app/main/default/objects/Environment_Profile__c/fields/Visible_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible to Customer</label>
    <type>Checkbox</type>
</CustomField>