force-app/main/default/objects/Environment_Profile__c/fields/VM_info__c.field-meta.xml
<CustomField>
    <fullName>VM_info__c</fullName>
    <label>VM info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>