force-app/main/default/objects/Environment_Profile__c/fields/VM_Memory__c.field-meta.xml
<CustomField>
    <fullName>VM_Memory__c</fullName>
    <label>VM Memory</label>
    <length>10</length>
    <type>Text</type>
</CustomField>