force-app/main/default/objects/Environment_Profile__c/recordTypes/DGX.recordType-meta.xml
<RecordType>
    <fullName>DGX</fullName>
    <active>true</active>
    <label>DGX</label>
</RecordType>