force-app/main/default/objects/Environment_Profile__c/recordTypes/DRIVE_Constellation.recordType-meta.xml
<RecordType>
    <fullName>DRIVE_Constellation</fullName>
    <active>true</active>
    <label>DRIVE Constellation</label>
</RecordType>