force-app/main/default/objects/Environment_Profile__c/recordTypes/vGPU.recordType-meta.xml
<RecordType>
    <fullName>vGPU</fullName>
    <active>true</active>
    <label>vGPU</label>
</RecordType>