force-app/main/default/objects/Environment_Profile__c/listViews/Community_Visible_Environment_Profiles.listView-meta.xml
<ListView>
    <fullName>Community_Visible_Environment_Profiles</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visible_to_Customer__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Community Visible Environment Profiles</label>
    <language>en_US</language>
</ListView>